# password-generator

./: .gitignore  README.md  passGen.spec  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: tests.yml
password_generator/: passGen.py  passGen.spec
test_password-generator/: test_PassGen.py
